--- a/src/main/resources/META-INF/resources/busdoc/busdocimport.xhtml
+++ b/src/main/resources/META-INF/resources/busdoc/busdocimport.xhtml
@@ -10,7 +10,7 @@
 
     <p:dialog header="Import Transactions" id="TransDlg" widgetVar="TransDialog" dynamic="true" responsive="true"
               modal="true" resizable="true" width="50%"  height="600" appendTo="@(body)" closeOnEscape="true">
-        <h:form id="transform">
+        <h:form id="transform" enctype="multipart/form-data">
             <div class="p-grid">
                 <div class="p-col-12 p-md-12">
                     <p:panelGrid columns="1" styleClass="card"  style="width: 100%">
