--- a/src/main/resources/META-INF/resources/hr/company.xhtml
+++ b/src/main/resources/META-INF/resources/hr/company.xhtml
@@ -73,6 +73,9 @@
                             <p:outputLabel value="CR No:" for="crno" />
                             <p:inputText id="crno" placeholder="CR No" value="#{companyController.selectedCompany.crno}" style="width: 100% !important"/>
 
+                            <p:outputLabel value="Address:" for="address" />
+                            <p:inputText id="address" placeholder="Address:" value="#{companyController.selectedCompany.addresss}" style="width: 100% !important"/>
+
                             <p:outputLabel value="Phone:" for="phone" />
                             <p:inputText id="phone" placeholder="Phone" value="#{companyController.selectedCompany.phone}" style="width: 100% !important"/>
 
