--- a/src/main/resources/META-INF/resources/accounts/jvviewer.xhtml
+++ b/src/main/resources/META-INF/resources/accounts/jvviewer.xhtml
@@ -41,11 +41,17 @@
                     <p:panel styleClass="card">
                         <p:dataTable id="accdoctable" var="led"
                                      value="#{jvViewerController.accdoc.ledlines}" widgetVar="acctable"
+                                     rowKey="#{led.llno}"
                                      emptyMessage="No Transactions found"
-                                     sortBy="#{jvViewerController.accdoc.docno}"
                                      styleClass="products-table ui-datatable-striped ui-datatable-sm ui-datatable-gridlines"
                                      style="font-size: smaller">
-                            <p:column headerText="No" style="width: 100px">
+                            <p:headerRow groupBy="#{jvViewerController.accdoc.docno}">
+                                <p:column colspan="7">
+                                    <h:outputText value="#{jvViewerController.accdoc.docno}"/>
+                                </p:column>
+                            </p:headerRow>
+
+                            <p:column headerText="No" style="width: 50px">
                                 <h:outputText value="#{led.llno}" />
                             </p:column>
 
@@ -86,23 +92,23 @@
                                     <h:outputText value="Total:" />
                                 </p:column>
                                 <p:column style="text-align:right">
-                                    <h:outputText value="#{jvViewerController.accdoc.ledlines.stream().map(x -> x.debit).sum()}">
-                                    <f:convertNumber pattern="#,##0.000" />
+                                    <h:outputText value="#{systemDefaultsController.formatDecimal(jvViewerController.accdoc.ledlines.stream().map(x -> x.debit).sum())}">
+                                        <f:convertNumber pattern="#,##0.000" />
                                     </h:outputText>
                                 </p:column>
                                 <p:column style="text-align:right">
-                                    <h:outputText value="#{jvViewerController.accdoc.ledlines.stream().map(x -> x.credit).sum()}">
-                                    <f:convertNumber pattern="#,##0.000" />
+                                    <h:outputText value="#{systemDefaultsController.formatDecimal(jvViewerController.accdoc.ledlines.stream().map(x -> x.credit).sum())}">
+                                        <f:convertNumber pattern="#,##0.000" />
                                     </h:outputText>
                                 </p:column>
                                 <p:column style="text-align:right">
-                                    <h:outputText value="#{jvViewerController.accdoc.ledlines.stream().map(x -> x.fcDebit).sum()}">
-                                    <f:convertNumber pattern="#,##0.000" />
+                                    <h:outputText value="#{systemDefaultsController.formatDecimal(jvViewerController.accdoc.ledlines.stream().map(x -> x.fcDebit).sum())}">
+                                        <f:convertNumber pattern="#,##0.000" />
                                     </h:outputText>
                                 </p:column>
                                 <p:column style="text-align:right">
-                                    <h:outputText value="#{jvViewerController.accdoc.ledlines.stream().map(x -> x.fcCredit).sum()}">
-                                    <f:convertNumber pattern="#,##0.000" />
+                                    <h:outputText value="#{systemDefaultsController.formatDecimal(jvViewerController.accdoc.ledlines.stream().map(x -> x.fcCredit).sum())}">
+                                        <f:convertNumber pattern="#,##0.000" />
                                     </h:outputText>
                                 </p:column>
                             </p:summaryRow>
