--- a/src/main/resources/META-INF/resources/accounts/report/statement.xhtml
+++ b/src/main/resources/META-INF/resources/accounts/report/statement.xhtml
@@ -23,14 +23,14 @@
                                              update=":mainform:datalist, :growl" icon="fa fa-refresh" />
                         </f:facet>
                         <div class="ui-fluid p-formgrid p-grid">
-                            <div class="p-field p-col-12 p-md-4">
+                            <div class="p-field p-col-12 p-md-6">
                                 <p:outputLabel value="To Date" for="todate" />
                                 <p:datePicker id="todate" value="#{statementController.statementDate}" showIcon="true" readonlyInput="true"
-                                              monthNavigator="true" required="true" requiredMessage="Please select Date" pattern="dd/MM/yyyy">
+                                              monthNavigator="true" yearNavigator="true" pattern="dd/MM/yyyy">
                                 </p:datePicker>
                             </div>
 
-                            <div class="p-field p-col-12 p-md-4">
+                            <div class="p-field p-col-12 p-md-6">
                                 <p:outputLabel value="Type:" for="ptype"/>
                                 <p:selectOneMenu id="ptype" value="#{statementController.selectedDocType}" effect="fold">
                                     <f:selectItems value="#{statementController.docTypes}" />
@@ -38,7 +38,7 @@
                                 </p:selectOneMenu>
                             </div>
 
-                            <div class="p-field p-col-12 p-md-4">
+                            <div class="p-field p-col-12 p-md-12">
                                 <p:outputLabel value="Company:" for="partner"/>
                                 <p:selectOneMenu id="partner" value="#{statementController.selectedBusinessPartner}" converter="#{entityConverter}" 
                                                  var="t" effect="fade" filter="true" filterMatchMode="contains">
@@ -66,13 +66,23 @@
                 <div class="p-col-12">
                     <p:toolbar id="toolbar">
                         <f:facet name="right">
-                            <p:commandButton id="exportPdf" icon="fa fa-file-pdf-o" styleClass="#{systemDefaultsController.systemButtonStyle} p-mr-2 p-mb-2" ajax="false">
-                                <p:tooltip value="Export to PDF" for="exportPdf"/>
-                                <l:dataExporter id="exportPdf" source="datalist" fileType="pdf" fileName="Ledger"/>
+                            <p:commandButton id="exportPdf2" icon="fa fa-file-pdf-o" update=":growl" ajax="false"
+                                             styleClass="#{systemDefaultsController.systemButtonStyle} p-mr-2 p-mb-2">
+                                <p:tooltip value="Export to PDF" for="exportPdf2"/>
+                                <p:fileDownload value="#{statementController.exportPdf}"/>
                             </p:commandButton>
 
+                            <p:commandButton id="exportXLS2" icon="fa fa-file-excel-o" update=":growl" ajax="false"
+                                             styleClass="#{systemDefaultsController.systemButtonStyle}">
+                                <p:tooltip value="Export to Excel" for="exportXLS2"/>
+                                <p:fileDownload value="#{statementController.exportXlsx}"/>
+                            </p:commandButton>
+                            
+                            <span class="ui-separator"></span>
+                            <i class="ui-icon pi pi-ellipsis-v"></i>
+                            
                             <p:commandButton id="exportXLS" icon="fa fa-file-excel-o" styleClass="#{systemDefaultsController.systemButtonStyle} p-mr-2 p-mb-2" ajax="false">
-                                <p:tooltip value="Export to Excel" for="exportXLS"/>
+                                <p:tooltip value="Export to Excel only data" for="exportXLS"/>
                                 <l:dataExporter id="exportXLS" source="datalist" fileType="excel" fileName="Ledger"/>
                             </p:commandButton>
 
@@ -88,12 +98,9 @@
                                      rowKey="#{item.docno}"
                                      emptyMessage="No Transactions found"
                                      styleClass="products-table ui-datatable-striped ui-datatable-sm"
-                                     style="font-size: small">
+                                     size="small">
 
-                            <p:column sortBy="#{item.docdate}" filterBy="#{item.docdate}" filterMatchMode="contains">
-                                <f:facet name="header">
-                                    <h:outputText value="Date"/>
-                                </f:facet>
+                            <p:column headerText="Date" sortBy="#{item.docdate}" filterBy="#{item.docdate}" filterMatchMode="contains">
                                 <h:outputText value="#{item.docdate}">
                                     <f:convertDateTime pattern="dd/MM/yyyy" />
                                 </h:outputText>
@@ -107,29 +114,29 @@
                                 <h:outputText value="#{item.refno}" />
                             </p:column>
 
-                            <p:column sortBy="#{item.grandtotal}" filterBy="#{item.grandtotal}" filterMatchMode="contains"  style="text-align: right">
+                            <p:column sortBy="#{item.invoiceAmount}" filterBy="#{item.invoiceAmount}" filterMatchMode="contains"  style="text-align: right">
                                 <f:facet name="header">
                                     <h:outputText value="Invoiced"/>
                                 </f:facet>
-                                <h:outputText value="#{item.grandtotal}">
+                                <h:outputText value="#{item.invoiceAmount}">
                                     <f:convertNumber pattern="#,##0.000" />
                                 </h:outputText>
                             </p:column>
 
-                            <p:column sortBy="#{item.totalPaid}" filterBy="#{item.totalPaid}" filterMatchMode="contains"  style="text-align: right">
+                            <p:column sortBy="#{item.paid}" filterBy="#{item.paid}" filterMatchMode="contains"  style="text-align: right">
                                 <f:facet name="header">
                                     <h:outputText value="Paid"/>
                                 </f:facet>
-                                <h:outputText value="#{item.totalPaid}">
+                                <h:outputText value="#{item.paid}">
                                     <f:convertNumber pattern="#,##0.000" />
                                 </h:outputText>
                             </p:column>
 
-                            <p:column sortBy="#{item.totalPending}" filterBy="#{item.totalPending}" filterMatchMode="contains"  style="text-align: right">
+                            <p:column sortBy="#{item.pending}" filterBy="#{item.pending}" filterMatchMode="contains"  style="text-align: right">
                                 <f:facet name="header">
                                     <h:outputText value="Balance"/>
                                 </f:facet>
-                                <h:outputText value="#{item.totalPending}">
+                                <h:outputText value="#{item.pending}">
                                     <f:convertNumber pattern="#,##0.000" />
                                 </h:outputText>
                             </p:column>
@@ -143,12 +150,12 @@
                                 </h:outputText>
                             </p:column>
 
-                            <p:column sortBy="#{item.findInvoiceAge(statementController.statementDate)}" 
-                                      filterBy="#{item.findInvoiceAge(statementController.statementDate)}" filterMatchMode="contains"  style="text-align: right">
+                            <p:column sortBy="#{item.days}" 
+                                      filterBy="#{item.days}" filterMatchMode="contains"  style="text-align: right">
                                 <f:facet name="header">
                                     <h:outputText value="Days"/>
                                 </f:facet>
-                                <h:outputText value="#{item.findInvoiceAge(statementController.statementDate)}"/>
+                                <h:outputText value="#{item.days}"/>
                             </p:column>
                         </p:dataTable>
                     </div>
