--- a/src/main/resources/META-INF/resources/diamond-layout/template.xhtml
+++ b/src/main/resources/META-INF/resources/diamond-layout/template.xhtml
@@ -28,6 +28,16 @@
             <ui:include src="./sidebar-right.xhtml"></ui:include>
             <ui:include src="./config.xhtml"></ui:include>
 
+            <p:growl id="growl" showDetail="true" life="3000" widgetVar="growlW"/>
+            <p:ajaxStatus id="ajax_status" widgetVar="ajax_status" styleClass="layout-ajax-loader">
+                <f:facet name="start">
+                    <i class="pi pi-spin pi-spinner layout-ajax-loader-icon" aria-hidden="true"></i>
+                </f:facet>
+
+                <f:facet name="complete">
+                    <h:outputText value="" />
+                </f:facet>
+            </p:ajaxStatus>     
             <div class="layout-content-wrapper">
                 <ui:include src="./topbar.xhtml">
                     <ui:param name="viewname" value="#{viewname}" />                    
@@ -38,16 +48,6 @@
                 </div>
                 <ui:include src="./footer.xhtml"></ui:include>
             </div>
-            <p:growl id="growl" showDetail="true" life="3000" widgetVar="growlW"/>
-            <p:ajaxStatus styleClass="layout-ajax-loader">
-                <f:facet name="start">
-                    <i class="pi pi-spin pi-spinner layout-ajax-loader-icon" aria-hidden="true"></i>
-                </f:facet>
-
-                <f:facet name="complete">
-                    <h:outputText value="" />
-                </f:facet>
-            </p:ajaxStatus>     
             <ui:include src="./search.xhtml"></ui:include>
             <div class="layout-mask modal-in"></div>
         </div>
